# ZeroNet-PyPI

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
tests/: function_test.py  gradient_check.py  layer_test.py  optimizer_test.py  test_zeronet.py
zeronet/core/: model.py
