[tool.poetry]
name = "zeronet"
version = "0.1.3"
description = "A Build-from-Scratch Example of Neural Network Learning Model based on NumPy."
authors = ["ddlee <cnlijiacheng96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4, <4"
numpy = ">=1.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
